--- a/src/component/about/WeAre.module.css
+++ b/src/component/about/WeAre.module.css
@@ -1,6 +1,6 @@
-* {
+/* * {
   font-family: Arial, Helvetica, Sans-Serif;
-}
+} */
 
 .we_are {
   background-color: #e0f5ff;
